--- a/index.html
+++ b/index.html
@@ -11,78 +11,79 @@
 <body>
     <div class="body-wrap">
         <!-- NAVIGATION -->
-
-
-        <!--nav old -->
-
-      <div class="nav-wrap">
+        <div class="nav-wrap">
             <nav>
                 <p class="logo"> <b>Sit <span> on </span> chair</b> </p>
 
                 <ul class="nav-list">
 
                     <li class="nav-li">
-                        <a class="li-hover" href="#"> <b>O firmie</b> </a>
+                        <a class="li-hover" href="#"> <b>Kontakt</b> </a>
                     </li>
                     <li class="nav-li">
                         <a href="#"> <b>Galeria</b> </a>
                     </li>
                     <li class="nav-li">
-                        <a href="#"> <b>Kontakt</b> </a>
+                        <a href="#"> <b>O firmie</b> </a>
                     </li>
                 </ul>
                 <!-- /nav-list -->
-        </nav>
-       </div>
+            </nav>
+        </div>
 
         <!-- /nav-wrap -->
         <!-- HEADER -->
-        <div class="slider-wrap">
+        <header class="header">
             <div class="slider-box">
                 <div class="slider-photo">
-                    <img src="./images/black_chair.png" />
+                    <img alt="black chair" src="./images/black_chair.png" />
                 </div>
                 <div class="slider-txt">
                     <p class="big-slider-txt"> <b>Sit <span>on</span> our <span>chair</span></b> </p>
                     <p class="normal-slider-txt"> Lorem ipsum dolor sit amet, ut mel essent audire recteque. No malorum singulis dissentiunt has. Mea maluisset honestatis eu, viderer referrentur mel te. Id aliquid theophrastus deterruisset duo. </p>
-                    <button class="medium-button"><a class="button-txt" href="#"> Zobacz więcej </a></button>
+                    <button class="medium-button"> Zobacz więcej </button>
                 </div>
 
             </div>
-        </div>
+        </header>
         <!-- SECTION GALLERY -->
         <section class="gallery-wrap">
-            <div class="gallery-box">
-
-                <div class="gallery-item1">
-                    <div class="photo-box">
-                        <div class="whitebox">
-                            <div class="whitebox-in">
-                                <p class="underline"> Chair <span class="upper-span">Clair </span> </p>
+            <div class="row-wrap">
+                <!-- gallery - photo-row -->
+                <div class="photo-row">
+                    <div class="gallery-item1">
+                        <div class="photo-box">
+                            <div class="whitebox">
+                                <div class="whitebox-in">
+                                    <p class="underline"> Chair <span class="upper-span">Clair </span> </p>
+                                </div>
                             </div>
                         </div>
-
                     </div>
-                </div>
 
-                <div class="gallery-item2">
-                    <div class="photo-box">
-                        <div class="whitebox">
-                            <div class="whitebox-in">
-                                <p class="underline"> Chair <span class="upper-span"> Margarita </span> </p>
+                    <div class="gallery-item2">
+                        <div class="photo-box">
+                            <div class="whitebox">
+                                <div class="whitebox-in">
+                                    <p class="underline"> Chair <span class="upper-span"> Margarita </span> </p>
+                                </div>
                             </div>
+
                         </div>
-
                     </div>
-                </div>
 
-                <div class="gallery-item3">
-                    <div class="txt-box">
-                        <p class="underline"> Finds all inputs </p>
-                        <p class="txt-center"> Et duo pericula mediocritatem, ut per indoctum. Mea maluisset honestatis eu, viderer referrentur mel te. Id aliquid theophrastus deterruisset duo. </p>
+                    <div class="gallery-item3">
+                        <div class="txt-box">
+                            <p class="underline-no-padding"> Finds all inputs </p>
+                            <p class="txt-left"> Finds all inputs that are not checked and highlights the next sibling span. Notice there is no change when clicking the checkboxes since no click events have been linked. </p>
+                            <p class="txt-left">
+                                Finds all inputs that are not checked and highlights the next sibling span. Notice there is no change when clicking the checkboxes since no click events have been linked.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </section>
         <!--/gallery-wrap -->
         <!-- SECTION PRICES -->
@@ -99,7 +100,7 @@
 
                     <div class="big-badge">
                         <div class="big-badge-wrap">
-                            <p class="price"> <b>85</b><sup class="sup"><b>99</b></sup> </span>
+                            <p class="price"> <b>85</b><sup class="sup"><b>99</b></sup>
                             </p>
                             <p class="small-price"> <b>Pln/Msc</b> </p>
                         </div>
@@ -120,7 +121,7 @@
                         </ul>
                     </div>
                     <button class="small-button">
-                        <p class="small-button-txt"> Dołącz </p>
+                        Dołącz
                     </button>
                 </div>
                 <!--/pricing-box1-->
@@ -134,7 +135,7 @@
 
                     <div class="big-badge">
                         <div class="big-badge-wrap">
-                            <p class="price"> <b>95</b><sup class="sup"><b>99</b></sup> </span>
+                            <p class="price"> <b>95</b><sup class="sup"><b>99</b></sup>
                             </p>
                             <p class="small-price"> <b>Pln/Msc</b> </p>
                         </div>
@@ -155,7 +156,7 @@
                         </ul>
                     </div>
                     <button class="small-button">
-                        <p class="small-button-txt"> Dołącz </p>
+                        Dołącz
                     </button>
                 </div>
                 <!--/pricing-box2-->
@@ -169,7 +170,7 @@
 
                     <div class="big-badge">
                         <div class="big-badge-wrap">
-                            <p class="price"> <b>211</b><sup class="sup"><b>00</b></sup> </span>
+                            <p class="price"> <b>211</b><sup class="sup"><b>00</b></sup>
                             </p>
                             <p class="small-price"> <b>Pln/Msc</b> </p>
                         </div>
@@ -188,10 +189,9 @@
                         <ul class="strong2-last">
                             <li class="table-txt2"> Porady projektanta </li>
                         </ul>
-
                     </div>
                     <button class="small-button">
-                        <p class="small-button-txt"> Dołącz </p>
+                        Dołącz
                     </button>
                 </div>
                 <!--/pricing-box3-->
@@ -221,67 +221,53 @@
                     </div>
                 </div>
                 <div class="form-right">
-                    <img class="form-img" src="./images/red_chair.png" />
                     <!-- checkbox -->
                     <div class="checkbox-box">
-                        <div class="checkbox-inbox">
-                            <input class="checkbox-input" type="checkbox" id="checkbox" />
-                            <div class="checkbox-div">
-                                <label for="checkbox"> Zgadzam się na przetwarzanie danych osobowych </label>
-                            </div>
-
-                        </div>
-                        <!--/checkbox-inbox-->
-
-                        <!-- button -->
-                        <div class="submit-it">
-                            <input type="submit" value="Wyślij" id="button-submit" />
-                            <div class="ease"></div>
+                        <img src="images/red_chair.png" alt="red chair" class="form_img">
+                        <div class="checkbox">
+                            <input type="checkbox" id="agree">
+                            <label for="agree" class="checkbox-txt">
+                                Zgadzam się na przetwarzanie danych osobowych
+                            </label>
                         </div>
                     </div>
+                    <button type="submit" name="name" class="button-submit">Wyślij</button>
 
-
+                    <!--/checkbox-inbox-->
+                    <!-- button -->
                 </div>
-                <!-- /checkbox-box -->
             </div>
-            <!-- /contact form -->
+            <!-- /checkbox-box -->
         </div>
-
+        <!-- /contact form -->
     </div>
+
     <!-- /form-wrap -->
 
     <!-- FOOTER -->
-    <footer>
-        <div class="footer-box">
-            <div class="footer-left">
-                <p class="footer-txt"> Copyright 2014 | All Rights Reserved &middot; Sit On Chair</p>
-            </div>
-
-            <div class="footer-right">
-                <img class="footer-logo" src="./images/flickr.png" />
-                <img class="footer-logo" src="./images/vimeo.png" />
-                <img class="footer-logo" src="./images/pinterest.png" />
-                <img class="footer-logo" src="./images/twitter.png" />
-            </div>
-            <div class="footer-logo-txt">
-                <p class> Sit <b>on</b> chair </p>
+    <footer class="footer_section">
+        <div class="wrapper footer-wrapper">
+            <!-- footer - copyright - left -->
+            <p class="float-left footer-paragraph">Copyright 2014 | All Rights Reserved. - Sit On Chair</p>
+            <!-- footer - logos - right -->
+            <div class="float-logos">
+                <a href="https://www.flickr.com/" target="_blank"><img src="images/flickr.png" alt="flickr logo"></a>
+                <a href="https://vimeo.com/" target="_blank"><img src="images/vimeo.png" alt="vimeo logo"></a>
+                <a href="https://pl.pinterest.com/" target="_blank"><img src="images/pinterest.png" alt="pinterest logo"></a>
+                <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" alt="twitter logo"></a>
+                <!-- footer - logo - right -->
+                <a href="#" class="footer-logo-txt"> sit <span>on</span> chair </a>
             </div>
         </div>
     </footer>
-    </div>
 
-    </div>
+
+
     <!--body wrap-->
 
 
-    </div>
-
-
-
-
-
-
-
-
-
 </body>
+
+
+
+</html>
